--- a/multi_qubit_gate_analysis.ipynb
+++ b/multi_qubit_gate_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "24b6f119",
    "metadata": {},
    "outputs": [],
@@ -22,11 +22,13 @@
     "import cirq\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"../Gates_Lab_Suite\")\n",
+    "sys.path.append(\"../../Gates_Lab_Suite\")\n",
     "\n",
     "from Auto_Algorithm import *\n",
     "from Core_Definition import *\n",
-    "from Visualization import *"
+    "from Visualization import *\n",
+    "\n",
+    "np.set_printoptions(precision=3)"
    ]
   },
   {
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9e0ff441",
    "metadata": {},
    "outputs": [],
@@ -108,6 +110,26 @@
     "\n",
     "    m = Quantum_Gate(\"CNOT\", 0, 1).Matrix_Representation(2)\n",
     "    return m\n",
+    "\n",
+    "\n",
+    "def figgatt_circuit_CNOT_method1(xi=0.25, theta1=0.5, theta2=0.5):\n",
+    "\n",
+    "    circuit = np.kron(Ry(0.5), Id)\n",
+    "    circuit = np.matmul(XX(xi), circuit)\n",
+    "    circuit = np.matmul(np.kron(Rx(-theta1), Rx(-theta2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Ry(-0.5), Id), circuit)\n",
+    "\n",
+    "    return circuit\n",
+    "\n",
+    "\n",
+    "def figgatt_circuit_CNOT_method2(xi=0.25, theta1=0.5, theta2=0.5):\n",
+    "\n",
+    "    circuit = np.kron(Ry(-0.5), Id)\n",
+    "    circuit = np.matmul(XX(xi), circuit)\n",
+    "    circuit = np.matmul(np.kron(Ry(theta1), Rx(theta2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Rz(1), Id), circuit)\n",
+    "\n",
+    "    return circuit\n",
     "\n",
     "\n",
     "def CZ():\n",
@@ -135,6 +157,16 @@
     "    return circuit\n",
     "\n",
     "\n",
+    "def CRx(theta):\n",
+    "\n",
+    "    theta *= np.pi\n",
+    "\n",
+    "    return np.array([[1, 0, 0, 0],\n",
+    "                     [0, 1, 0, 0],\n",
+    "                     [0, 0, np.cos(theta/2), -1j * np.sin(theta/2)],\n",
+    "                     [0, 0, -1j * np.sin(theta/2), np.cos(theta/2)]])\n",
+    "\n",
+    "\n",
     "def CRy(theta):\n",
     "\n",
     "    theta *= np.pi\n",
@@ -155,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "b4653121",
    "metadata": {},
    "outputs": [],
@@ -193,93 +225,69 @@
     "  # Square the trace norm to get the fidelity\n",
     "  fidelity = trace_norm**2\n",
     "\n",
-    "  return fidelity\n"
+    "  return fidelity\n",
+    "\n",
+    "\n",
+    "def spectral_distance(U, V):\n",
+    "   \n",
+    "   return np.linalg.norm(U-V, 2)\n",
+    "\n",
+    "# Seems to be the best so far:\n",
+    "def spectral_distance_ignoring_global_phase(U, V):\n",
+    "    \n",
+    "    phase = np.angle(np.trace(np.dot(U.conj().T, V)))\n",
+    "    V_phase_corrected = V * np.exp(-1j * phase)\n",
+    "\n",
+    "    return spectral_distance(U, V_phase_corrected)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3423d242",
+   "execution_count": 5,
+   "id": "c550e90d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "array([[ 7.071e-01+7.071e-01j,  6.687e-33+1.112e-32j,\n",
+       "         9.813e-17+5.888e-17j, -7.716e-17-3.386e-17j],\n",
+       "       [ 6.687e-33+1.112e-32j,  7.071e-01+7.071e-01j,\n",
+       "        -7.716e-17-3.386e-17j,  9.813e-17+5.888e-17j],\n",
+       "       [-2.165e-17+7.716e-17j, -3.925e-17-1.178e-16j,\n",
+       "         1.766e-16-1.374e-16j,  7.071e-01+7.071e-01j],\n",
+       "       [-3.925e-17-1.178e-16j, -2.165e-17+7.716e-17j,\n",
+       "         7.071e-01+7.071e-01j,  1.766e-16-1.374e-16j]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cirq.equal_up_to_global_phase(figgatt_circuit_CZ(), CZ())"
+    "figgatt_circuit_CNOT_method1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd96881c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "5151db0f",
+   "execution_count": 6,
+   "id": "84cd9ea5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15.999999999999996"
+       "4.4209952906199435e-16"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fidelity(np.eye(4), CNOT())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f2d6e9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_41725/2752200329.py:1: RuntimeWarning: divide by zero encountered in divide\n",
-      "  figgatt_circuit_CZ() @ CZ().conj().T / np.eye(4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.70710678-0.70710678j,       -inf       -infj,\n",
-       "               inf       -infj,        inf       -infj],\n",
-       "       [      -inf       -infj, 0.70710678-0.70710678j,\n",
-       "              -inf       +infj,        inf       -infj],\n",
-       "       [       inf       -infj,       -inf       +infj,\n",
-       "        0.70710678-0.70710678j,       -inf       +infj],\n",
-       "       [       inf       -infj,       -inf       +infj,\n",
-       "               inf       -infj, 0.70710678-0.70710678j]])"
-      ]
-     },
-     "execution_count": 166,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "figgatt_circuit_CZ() @ CZ().conj().T "
+    "spectral_distance_ignoring_global_phase(figgatt_circuit_CNOT_method1(), (CRx(1) @ np.kron(Rz(0.5), Id)))"
    ]
   },
   {
@@ -287,12 +295,22 @@
    "id": "cdb4cd43",
    "metadata": {},
    "source": [
-    "For a given two-qubit gate, find a set of single-qubit and two-qubit gates that implement the same unitary:"
+    "# Optimization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14c30c3d",
+   "metadata": {},
+   "source": [
+    "### Naive ansatz\n",
+    "\n",
+    "Sandwich an XX gate with arbitrary single qubit rotations using Euler rotations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "id": "5b429cdd",
    "metadata": {},
    "outputs": [],
@@ -300,7 +318,8 @@
     "def circuit_ansatz_euler_rotations(alpha1, beta1, gamma1, alpha2, beta2, gamma2, alphap1, betap1, gammap1, alphap2, betap2, gammap2, xi_xx):\n",
     "    \n",
     "    # Arbitrary single-qubit rotation on both qubits (each qubit can have different angle)\n",
-    "    circuit = np.kron(Rz(alpha1), Rz(alpha2))\n",
+    "    circuit = np.kron(Id, Id)\n",
+    "    circuit = np.matmul(np.kron(Rz(alpha1), Rz(alpha2)), circuit)\n",
     "    circuit = np.matmul(np.kron(Ry(beta1), Ry(beta2)), circuit)\n",
     "    circuit = np.matmul(np.kron(Rz(gamma1), Rz(gamma2)), circuit)\n",
     "\n",
@@ -312,158 +331,305 @@
     "    circuit = np.matmul(np.kron(Ry(betap1), Ry(betap2)), circuit)\n",
     "    circuit = np.matmul(np.kron(Rz(gammap1), Rz(gammap2)), circuit)\n",
     "\n",
-    "    return circuit / circuit[0][0]"
+    "    return circuit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "8f80f34c",
+   "execution_count": 8,
+   "id": "0f52b962",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bounds = ((-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (0, 2))\n",
-    "exact_solution = [0, 0.5, 0, 0, 0, 0, 0, -0.5, -0.5, 0.5, 0.5, -0.5, 0.25]\n",
+    "def figgatt_circuit_CNOT_method1(xi=0.25, theta1=0.5, theta2=0.5):\n",
     "\n",
+    "    circuit = np.kron(Id, Id)\n",
+    "    circuit = np.matmul(np.kron(Ry(0.5), Id), circuit)\n",
+    "    circuit = np.matmul(XX(xi), circuit)\n",
+    "    circuit = np.matmul(np.kron(Rx(-theta1), Rx(-theta2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Ry(-0.5), Id), circuit)\n",
     "\n",
-    "initial_guess = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25]\n",
-    "initial_guess = exact_solution"
+    "    return circuit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
+   "id": "86637497",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds = ((-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2), (-2, 2))\n",
+    "initial_guess = [0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9355f37",
+   "metadata": {},
+   "source": [
+    "Euler rotations for CNOT:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8bf5bd2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exact_solution_CNOT = [0, 0.5, 0, 0, 0, 0, -1, 0.5, 0.5, -0.5, 0.5, 0.5, 0.25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9ae82ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.97757079643251e-16"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spectral_distance_ignoring_global_phase(circuit_ansatz_euler_rotations(*exact_solution_CNOT), figgatt_circuit_CNOT_method1()) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00698538",
+   "metadata": {},
+   "source": [
+    "Euler rotations for CZ:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6f28b02e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exact_solution_CZ = [0, 0.5, 0, 0, 0, 0, 0, -0.5, -0.5, 0.5, 0.5, -0.5, 0.25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ec818daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  0,  0,  0],\n",
+       "       [ 0,  1,  0,  0],\n",
+       "       [ 0,  0,  1,  0],\n",
+       "       [ 0,  0,  0, -1]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CZ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8f80f34c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 7.716e-17+1.449e-16j,  7.071e-01-7.071e-01j,\n",
+       "        -7.716e-17-3.386e-17j,  5.551e-17-5.551e-17j],\n",
+       "       [ 7.071e-01-7.071e-01j,  1.449e-16+7.716e-17j,\n",
+       "         5.551e-17-5.551e-17j, -7.716e-17-3.386e-17j],\n",
+       "       [-5.551e-17+5.551e-17j, -3.386e-17-7.716e-17j,\n",
+       "         7.071e-01-7.071e-01j, -3.386e-17+3.386e-17j],\n",
+       "       [-3.386e-17-7.716e-17j, -5.551e-17+5.551e-17j,\n",
+       "         3.386e-17-3.386e-17j,  7.071e-01-7.071e-01j]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circuit_ansatz_euler_rotations(*exact_solution_CZ)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ed713e4",
+   "metadata": {},
+   "source": [
+    "### Objective functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "874c034e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def CNOT_optimization_function(x):\n",
     "\n",
-    "    return np.linalg.norm(circuit_ansatz_euler_rotations(*x) - CNOT())\n",
+    "    return spectral_distance_ignoring_global_phase(circuit_ansatz_euler_rotations(*x), CNOT())\n",
     "\n",
     "\n",
     "\n",
     "def CZ_optimization_function(x):\n",
     "\n",
-    "    return np.linalg.norm(circuit_ansatz_euler_rotations(*x) - CZ())"
+    "    return spectral_distance_ignoring_global_phase(circuit_ansatz_euler_rotations(*x), CZ())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "026aacc6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.2183981524678704e+16\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.linalg.norm(CZ()-circuit_ansatz_euler_rotations(*exact_solution)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "id": "d141c13f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.64149953e-16, 1.00000000e+00, 8.42634303e-17, 7.85046229e-17],\n",
-       "       [1.00000000e+00, 1.64149953e-16, 7.85046229e-17, 8.42634303e-17],\n",
-       "       [7.85046229e-17, 8.42634303e-17, 1.00000000e+00, 4.78884530e-17],\n",
-       "       [8.42634303e-17, 7.85046229e-17, 4.78884530e-17, 1.00000000e+00]])"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "circuit_ansatz_euler_rotations(*exact_solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "id": "7fe6f139",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.8284271247461903"
-      ]
-     },
-     "execution_count": 142,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CNOT_optimization_function(exact_solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 16,
    "id": "afe46bc3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = minimize(CNOT_optimization_function, initial_guess, bounds=bounds, method=\"Nelder-Mead\")"
+    "def get_CRx_gate(theta):\n",
+    "\n",
+    "\n",
+    "    def CRx_optimization_function(x):\n",
+    "\n",
+    "        return spectral_distance_ignoring_global_phase(circuit_ansatz_euler_rotations(*x), CRx(theta))\n",
+    "\n",
+    "    result = minimize(CRx_optimization_function, initial_guess, bounds=bounds, method=\"L-BFGS-B\")\n",
+    "\n",
+    "    clean_result = []\n",
+    "    for r in result.x:\n",
+    "        if r < 1e-5:\n",
+    "            clean_result.append(0)\n",
+    "        else:\n",
+    "            clean_result.append(r)\n",
+    "    clean_result\n",
+    "\n",
+    "    return circuit_ansatz_euler_rotations(*clean_result)\n",
+    "\n",
+    "\n",
+    "def get_CRy_gate(theta):\n",
+    "\n",
+    "\n",
+    "    def CRy_optimization_function(x):\n",
+    "\n",
+    "        return spectral_distance_ignoring_global_phase(circuit_ansatz_euler_rotations(*x), CRy(theta))\n",
+    "\n",
+    "    result = minimize(CRy_optimization_function, initial_guess, bounds=bounds, method=\"L-BFGS-B\")\n",
+    "\n",
+    "    clean_result = []\n",
+    "    for r in result.x:\n",
+    "        if r < 1e-5:\n",
+    "            clean_result.append(0)\n",
+    "        else:\n",
+    "            clean_result.append(r)\n",
+    "    clean_result\n",
+    "\n",
+    "    return circuit_ansatz_euler_rotations(*clean_result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "3c42a254",
+   "execution_count": 17,
+   "id": "4950cffc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       message: Maximum number of function evaluations has been exceeded.\n",
-       "       success: False\n",
-       "        status: 1\n",
-       "           fun: 0.3817631793587355\n",
-       "             x: [ 9.604e-01  5.030e-01 ...  1.000e+00  2.476e-01]\n",
-       "           nit: 1975\n",
-       "          nfev: 2600\n",
-       " final_simplex: (array([[ 9.604e-01,  5.030e-01, ...,  1.000e+00,\n",
-       "                         2.476e-01],\n",
-       "                       [ 9.633e-01,  5.052e-01, ...,  1.000e+00,\n",
-       "                         2.477e-01],\n",
-       "                       ...,\n",
-       "                       [ 9.632e-01,  5.035e-01, ...,  1.000e+00,\n",
-       "                         2.478e-01],\n",
-       "                       [ 9.617e-01,  5.031e-01, ...,  1.000e+00,\n",
-       "                         2.478e-01]]), array([ 3.818e-01,  3.818e-01, ...,  3.822e-01,  3.822e-01]))"
+       "1.4761445386105821e-07"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "theta = 0.245\n",
+    "spectral_distance_ignoring_global_phase(get_CRx_gate(theta), CRx(theta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c1e2cd2",
+   "metadata": {},
+   "source": [
+    "# Try using multiple controls..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4950cffc",
+   "execution_count": 18,
+   "id": "8bb8a47d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def CCNot(theta):\n",
+    "\n",
+    "    theta *= np.pi\n",
+    "\n",
+    "    return np.array([[1, 0, 0, 0, 0, 0, 0, 0],\n",
+    "                     [0, 1, 0, 0, 0, 0, 0, 0],\n",
+    "                     [0, 0, 1, 0, 0, 0, 0, 0],\n",
+    "                     [0, 0, 0, 1, 0, 0, 0, 0],\n",
+    "                     [0, 0, 0, 0, 1, 0, 0, 0],\n",
+    "                     [0, 0, 0, 0, 0, 1, 0, 0],\n",
+    "                     [0, 0, 0, 0, 0, 0, 0, 1],\n",
+    "                     [0, 0, 0, 0, 0, 0, 1, 0]])\n",
+    "\n",
+    "def CRx(theta):\n",
+    "\n",
+    "    theta *= np.pi\n",
+    "\n",
+    "    return np.array([[1, 0, 0, 0],\n",
+    "                     [0, 1, 0, 0],\n",
+    "                     [0, 0, np.cos(theta/2), -1j * np.sin(theta/2)],\n",
+    "                     [0, 0, -1j * np.sin(theta/2), np.cos(theta/2)]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "afc109d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def circuit_ansatz_euler_rotations_three_qubits(alpha1, beta1, gamma1, alpha2, beta2, gamma2, alphap1, betap1, gammap1, alphap2, betap2, gammap2, xi_xx):\n",
+    "    \n",
+    "    # Arbitrary single-qubit rotation on both qubits (each qubit can have different angle)\n",
+    "    circuit = np.kron(Id, Id)\n",
+    "    circuit = np.matmul(np.kron(Rz(alpha1), Rz(alpha2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Ry(beta1), Ry(beta2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Rz(gamma1), Rz(gamma2)), circuit)\n",
+    "\n",
+    "    # XX gate of any angle\n",
+    "    circuit = np.matmul(XX(xi_xx), circuit)\n",
+    "\n",
+    "    # Arbitrary single-qubit rotation on both qubits (each qubit can have different angle)\n",
+    "    circuit = np.matmul(np.kron(Rz(alphap1), Rz(alphap2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Ry(betap1), Ry(betap2)), circuit)\n",
+    "    circuit = np.matmul(np.kron(Rz(gammap1), Rz(gammap2)), circuit)\n",
+    "\n",
+    "    return circuit"
+   ]
   }
  ],
  "metadata": {
