--- a/simulation/h4/simulate_ground_state_circuits.ipynb
+++ b/simulation/h4/simulate_ground_state_circuits.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.18|INFO|2025-07-15 18:00:32]: Using numpy backend on /CPU:0\n",
+      "[Qibo 0.2.18|INFO|2025-07-16 15:37:38]: Using numpy backend on /CPU:0\n",
       "/home/liamj/Molecular Simulation/chemical-graph/tequila-beta/lib/python3.12/site-packages/tequila/simulators/simulator_api.py:5: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  import pkg_resources\n"
      ]
@@ -95,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HF  -1.8291374124430186\n",
+      "HF  -1.8291374124430182\n",
       "FCI  -1.9961503255188089\n"
      ]
     }
@@ -179,7 +179,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 16.26244097546237 meh?\n",
+      "difference from fci: 16.26244097546259 meh?\n",
       "\n",
       "Original number of measurements: 361\n",
       "Reduced number of measurements: 103\n"
@@ -197,7 +197,7 @@
     "cirq_JW_G1_optimized_orbitals = tq.compile(U_JW_G1_optimized_orbitals_fixed_params, backend=\"cirq\")\n",
     "\n",
     "print(f\"difference from fci: {abs(res.energy-fci)*1000} meh?\\n\")\n",
-    "energy_JW_G1_optimized_orbitals_fixed_params = res.energy\n",
+    "energy_JW_G1_optimized_orbitals = res.energy\n",
     "\n",
     "print(f\"Original number of measurements: {len(H_JW_G1_optimized_orbitals.keys())}\")\n",
     "reduced_measurements_JW_G1_optimized_orbitals = reduce_measurements_naive(H_JW_G1_optimized_orbitals, 8)\n",
@@ -223,7 +223,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 16.699404396847804 meh?\n",
+      "difference from fci: 16.69940439785944 meh?\n",
       "\n",
       "Original number of measurements: 361\n",
       "Reduced number of measurements: 103\n"
@@ -275,7 +275,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 9.69712864691985 meh?\n",
+      "difference from fci: 9.697128646922515 meh?\n",
       "Original number of measurements: 361\n",
       "Reduced number of measurements: 103\n"
      ]
@@ -368,7 +368,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 39.89570428502742 meh?\n",
+      "difference from fci: 39.89570428502609 meh?\n",
       "Original number of measurements: 317\n",
       "Reduced number of measurements: 88\n"
      ]
@@ -394,6 +394,8 @@
     "        x = 1\n",
     "\n",
     "cirq_PT_G1 = tq.compile(U_PT_G1_mapped, backend=\"cirq\")\n",
+    "\n",
+    "energy_PT_G1 = res.energy\n",
     "\n",
     "print(f\"difference from fci: {abs(res.energy-fci)*1000} meh?\")\n",
     "\n",
@@ -421,7 +423,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 16.262440975463033 meh?\n",
+      "difference from fci: 16.26244097546281 meh?\n",
       "\n",
       "Original number of measurements: 325\n",
       "Reduced number of measurements: 84\n"
@@ -438,15 +440,7 @@
     "U_PT_G1_optimized_orbitals_fixed_params = U_PT_SPA.map_variables(variables=res.variables)\n",
     "cirq_PT_G1_optimized_orbitals = tq.compile(U_PT_G1_optimized_orbitals_fixed_params, backend=\"cirq\")\n",
     "\n",
-    "\n",
-    "# for gate in U_JW_G1_mapped.gates:\n",
-    "#     try:\n",
-    "#         if not isinstance(gate.parameter, tq.objective.objective.Variable):\n",
-    "#             gate.parameter = gate.parameter.transformation(gate.parameter.args[0])\n",
-    "#     except:\n",
-    "#         x = 1\n",
-    "\n",
-    "# cirq_PT_G1_optimized_orbitals = tq.compile(U_PT_SPA, backend=\"cirq\")\n",
+    "energy_PT_G1_optimized_orbitals = res.energy\n",
     "\n",
     "print(f\"difference from fci: {abs(res.energy-fci)*1000} meh?\\n\")\n",
     "\n",
@@ -474,7 +468,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 16.699404396897542 meh?\n",
+      "difference from fci: 16.699404397387816 meh?\n",
       "\n",
       "Original number of measurements: 317\n",
       "Reduced number of measurements: 88\n"
@@ -498,6 +492,8 @@
     "        x = 1\n",
     "\n",
     "cirq_PT_G2 = tq.compile(U_PT_G2_mapped, backend=\"cirq\")\n",
+    "\n",
+    "energy_PT_G2 = res.energy\n",
     "\n",
     "print(f\"difference from fci: {abs(res.energy-fci)*1000} meh?\\n\")\n",
     "\n",
@@ -525,7 +521,7 @@
      "output_type": "stream",
      "text": [
       "No variables given...\n",
-      "difference from fci: 9.697128646918518 meh?\n",
+      "difference from fci: 9.697128646920739 meh?\n",
       "\n",
       "Original number of measurements: 325\n",
       "Reduced number of measurements: 84\n"
@@ -550,6 +546,8 @@
     "        x = 1\n",
     "\n",
     "cirq_PT_G2_optimized_orbitals = tq.compile(U_PT_G2_optimized_orbitals_mapped, backend=\"cirq\")\n",
+    "\n",
+    "energy_PT_G2_optimized_orbitals = res.energy\n",
     "\n",
     "print(f\"difference from fci: {abs(res.energy-fci)*1000} meh?\\n\")\n",
     "\n",
@@ -631,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "c1ff6e4a",
    "metadata": {},
    "outputs": [
@@ -639,14 +637,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(-1.956254594167206+0j)\n",
-      "(-1.9798879202636586+0j)\n",
-      "(-1.9794509370935032+0j)\n",
-      "(-1.9864533176619048+0j)\n",
-      "(-1.9562546977985926+2.39971950374121e-16j)\n",
-      "(-1.9798879202636577+0j)\n",
-      "(-1.9794511419404737+1.1231995681651336e-16j)\n",
-      "(-1.98645367942412+7.231220685567629e-16j)\n"
+      "tq energy : cirq/tq EV energy\n",
+      "-1.9562546212337766 : -1.956254594167206\n",
+      "-1.9798878845433463 : -1.9798879202636583\n",
+      "-1.9794509211209494 : -1.9794509370935032\n",
+      "-1.9864531968718864 : -1.9864533176619044\n",
+      "-1.9562546212337828 : -1.9562546977985926\n",
+      "-1.979887884543346 : -1.979887920263657\n",
+      "-1.979450921121421 : -1.97945133994675\n",
+      "-1.9864531968718881 : -1.9864536794241197\n"
      ]
     }
    ],
@@ -698,15 +697,16 @@
     "energy_PT_G2_optimized_orbitals_cirq = cirq_H_PT_G1_optimized_orbitals.expectation_from_state_vector(state_vector_PT_G2_optimized_orbitals, qubit_map=qubit_map)\n",
     "\n",
     "\n",
-    "print(energy_JW_G1_cirq)\n",
-    "print(energy_JW_G1_optimized_orbitals_cirq)\n",
-    "print(energy_JW_G2_cirq)\n",
-    "print(energy_JW_G2_optimized_orbitals_cirq)\n",
+    "print(\"tq energy : cirq/tq EV energy\")\n",
+    "print(f\"{energy_JW_G1.real} : {energy_JW_G1_cirq.real}\")\n",
+    "print(f\"{energy_JW_G1_optimized_orbitals.real} : {energy_JW_G1_optimized_orbitals_cirq.real}\")\n",
+    "print(f\"{energy_JW_G2.real} : {energy_JW_G2_cirq.real}\")\n",
+    "print(f\"{energy_JW_G2_optimized_orbitals.real} : {energy_JW_G2_optimized_orbitals_cirq.real}\")\n",
     "\n",
-    "print(energy_PT_G1_cirq)\n",
-    "print(energy_PT_G1_optimized_orbitals_cirq)\n",
-    "print(energy_PT_G2_cirq)\n",
-    "print(energy_PT_G2_optimized_orbitals_cirq)"
+    "print(f\"{energy_PT_G1.real} : {energy_PT_G1_cirq.real}\")\n",
+    "print(f\"{energy_PT_G1_optimized_orbitals.real} : {energy_PT_G1_optimized_orbitals_cirq.real}\")\n",
+    "print(f\"{energy_PT_G2.real} : {energy_PT_G2_cirq.real}\")\n",
+    "print(f\"{energy_PT_G2_optimized_orbitals.real} : {energy_PT_G2_optimized_orbitals_cirq.real}\")"
    ]
   },
   {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "d16753a5",
    "metadata": {},
    "outputs": [],
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "689d508f",
    "metadata": {},
    "outputs": [
@@ -755,28 +755,37 @@
      "output_type": "stream",
      "text": [
       "-1.9649524886216567\n",
-      "-1.7017386361692295\n",
+      "-1.7017386361692293\n",
       "-1.9876876568223216\n",
-      "-1.3146402799316625\n",
+      "-1.314640279931664\n",
       "-1.7588093268734863\n",
       "-1.8408134716463134\n",
-      "-1.778664775499095\n",
-      "-1.8347226308235798\n"
+      "-1.7786648441144242\n",
+      "-1.8347226308235796\n"
      ]
     }
    ],
    "source": [
+    "# JW Transformation, G1\n",
     "res_dict_JW_G1 = simulate_data_cirq(H_JW_G1_dict, cirq_JW_G1.circuit, 8)\n",
-    "print(get_energy_from_expectation_values(H_JW_G1_dict, convert_population_data_to_expectation_values(res_dict_JW_G1)))\n",
+    "evs_JW_G1 = convert_population_data_to_expectation_values(res_dict_JW_G1)\n",
+    "print(get_energy_from_expectation_values(H_JW_G1_dict, evs_JW_G1))\n",
     "\n",
+    "# JW Transformation, G1 with optimal hamiltonian\n",
     "res_dict_JW_G1_optimized_orbitals = simulate_data_cirq(H_JW_G1_optimized_orbitals_dict, cirq_JW_G1_optimized_orbitals.circuit, 8)\n",
-    "print(get_energy_from_expectation_values(H_JW_G1_optimized_orbitals_dict, convert_population_data_to_expectation_values(res_dict_JW_G1_optimized_orbitals)))\n",
+    "evs_JW_G1_optimized_orbitals = convert_population_data_to_expectation_values(res_dict_JW_G1_optimized_orbitals)\n",
+    "print(get_energy_from_expectation_values(H_JW_G1_optimized_orbitals_dict, evs_JW_G1_optimized_orbitals))\n",
     "\n",
+    "# JW Transformation, G2\n",
     "res_dict_JW_G2 = simulate_data_cirq(H_JW_G2_dict, cirq_JW_G2.circuit, 8)\n",
-    "print(get_energy_from_expectation_values(H_JW_G1_dict, convert_population_data_to_expectation_values(res_dict_JW_G2)))\n",
+    "evs_JW_G2 = convert_population_data_to_expectation_values(res_dict_JW_G2)\n",
+    "print(get_energy_from_expectation_values(H_JW_G1_dict, evs_JW_G2))\n",
     "\n",
+    "# JW Transformation, G2 with optimal hamiltonian\n",
     "res_dict_JW_G2_optimized_orbitals = simulate_data_cirq(H_JW_G1_dict, cirq_JW_G1.circuit, 8)\n",
-    "print(get_energy_from_expectation_values(H_JW_G1_optimized_orbitals_dict, convert_population_data_to_expectation_values(res_dict_JW_G2_optimized_orbitals)))\n",
+    "evs_JW_G2_optimized_orbitals = convert_population_data_to_expectation_values(res_dict_JW_G2_optimized_orbitals)\n",
+    "print(get_energy_from_expectation_values(H_JW_G1_optimized_orbitals_dict, evs_JW_G2_optimized_orbitals))\n",
+    "\n",
     "\n",
     "# Parity Transformation, G1\n",
     "res_dict_PT_G1 = simulate_data_cirq(H_PT_G1_dict, cirq_PT_G1.circuit, 6)\n",
