--- a/simulation/h4/simulate_ground_state_circuits.ipynb
+++ b/simulation/h4/simulate_ground_state_circuits.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "91398d2a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/liamjeanette/Development/molecular-simulation/teq-beta-env/lib/python3.13/site-packages/tequila/simulators/simulator_api.py:5: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    }
+   ],
    "source": [
     "import cirq\n",
     "import qiskit\n",
@@ -1580,7 +1589,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teq-beta-env (3.12.3)",
+   "display_name": "teq-beta-env",
    "language": "python",
    "name": "python3"
   },
@@ -1594,7 +1603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
